# signal-harness

./: ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  flake.nix  skills.md
examples/: canonical.nota
schema/: signal-harness.concept.schema
src/: lib.rs
tests/: canonical_examples.rs  round_trip.rs
